2002-06-22  Cyrille Chepelov  <cyrille@chepelov.org>

	* lib/font.c: one who expects a text's font to be changed shall 
	actually request the attributes to apply to the whole range of the
	said text... D'oh! 

	* lib/font.c: extents computation was wrong.

	* lib/font.c: dia_font_get_legacy_name(); g_strconcat works better
	if a last NULL parameter is added...

	* lib/font.c: extents computation was completely wrong. This looks
	much better this time.

	* objects/UML/class.c: fixed the various strings positions.

	* lib/font.h, and **/*.[ch] (all callers of dia_font_new): used
	macros to get the hardcoded base fonts.

	* objects/ER/relationship.c: wasn't converted to DiaFont*
	
2002-06-22  Hans Breuer  <hans@breuer.org>

	* lib/widget.c : dont use backend specific functions
	to get on the font_families. Including it would mean
	including <windows.h> which breaks due to namespace
	pollutions ...

	* lib/libdia.def : updated externals

	* app/makefile.msc : temporary disabled: -DHAVE_LIBART

	* lib/font.c : added empty dia_font_init_instance function,
	reformatting of dia_fon_unref to allow to set breakpoint,
	dia_fon_build_layout() : dont crash on string==NULL

	* lib/text.c (text_set_attributes) : don't unref the wrong font

	* lib/widgets.c (dia_fon_selector_set_font) : our hashtable
	stores lowercased font names, but dia_font_get_family()
	returns mixed case 	

2002-06-22  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/widgets.c: 
	* app/render_gdk.c: Patch from Hans Breuer.

	* app/Makefile.am (dia_core_files): diaconv commented out for now.
	
2002-06-22  Cyrille Chepelov  <cyrille@chepelov.org>

	* lib/all files touched yesterday: took into account some of Hans
	Breuer's remarks in
	<3.0.5.32.20020622073942.0088aec0@odin.botanik.biologie.uni-muenchen.de>
	(jeez, weren't GUIDs supposed to be long and random enough ?)

	* objects/chronogram/*: 
	* objects/custom/*:
	* objects/ER/*:
	* objects/flowchart/*:
	* objects/FS/*:
	* objects/GRAFCET/*:
	* objects/SADT/*: