@@ -1,3 +1,7 @@
+2002-06-22  Lars Clausen  <lrclause@cs.uiuc.edu>
+
+	* lib/widgets.c (dia_font_selector_init): Font names sorted.
+
 2002-06-22  Cyrille Chepelov  <cyrille@chepelov.org>
 
 	* lib/font.c: one who expects a text's font to be changed shall 
